--- a/css/main.css
+++ b/css/main.css
@@ -318,6 +318,26 @@ a {
     margin: 0;
 }
 
+.tweet-post-video{
+    max-width: 700px;
+}
+
+.tweet-video{
+    width: 100%;
+    padding-top:56.25%;
+    position: relative;
+}
+
+.tweet-video video{
+    width: 100%;
+    height: 100%;
+    position:absolute;
+    top:0;
+    left:0;
+    border-radius: 9px;
+}
+
+
 .tweet-pic {
     margin: 10px 0;
 }
