--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@
     padding: 0;
     box-sizing:content-box;
     font-size: 100%;
-    font-family: 'Open Sans', sans-serif;
+    font-family: "Onest";
     color: #FFFFFF;
 }
 
@@ -49,9 +49,9 @@ a {
 
 .prof-pic {
     overflow: hidden;
-    width: 10rem;
-    height: 10rem;
-    margin: -10rem 0;
+    width: 8rem;
+    height: 8rem;
+    margin: -8.2rem 0;
     border-radius:100%;
     border: 0.3rem solid #ffffff;
 }
@@ -94,7 +94,7 @@ a {
 }
 
 .username span {
-    font-size: 35px;
+    font-size: 1.5rem;
     margin-right: 5px;
     font-weight: 600;
     letter-spacing: 1px;
@@ -113,7 +113,7 @@ a {
 }
 
 .role {
-    font-size: 22px ;
+    font-size: 1.3rem ;
 }
 
 .bio {
