--- a/css/main.css
+++ b/css/main.css
@@ -5,10 +5,11 @@
     font-size: 100%;
     font-family: "Onest";
     color: #FFFFFF;
+    /*border: 1px solid red debug*/
 }
 
 body {  
-    background: linear-gradient(180deg, hsla(240, 91%, 73%, 1) 28%, hsla(291, 79%, 51%, 1) 100%);    
+    background: linear-gradient(180deg, hsla(240, 91%, 73%, 1) 28%, hsla(291, 79%, 51%, 1) 100%);       
 }
 
 a {
@@ -20,6 +21,7 @@ a {
     max-width: 50rem;
     margin: 0 auto;
     width: 100%;
+    height: auto;
     
 }
 
@@ -220,6 +222,7 @@ a {
 .tweet {
     position: relative;
     display: flex;
+    height: auto;
     flex-direction: row;
     flex-basis: auto;
     align-items: stretch;
@@ -388,58 +391,20 @@ a {
     color: #dadada;
 }
 
-.quote-tweet {
-    margin: 10px 0;
-}
 
-.quote-tweet-content {
-    border-radius: 15px;
-    border: 1px solid #4b4b4b;
-    padding: 10px;
-}
-
-.quote-tweet-content img {
-    border-radius: 15px;
-    border: 1px solid #4b4b4b;
-    padding: 0;
-}
-
-.quote-prof-pic-tweeter-info {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    margin-bottom: 5px;
-}
-
-.quote-prof-pic-tweeter-info img {
-    height: 20px;
-    margin-right: 5px;
-}
-
-.quote-prof-pic-tweeter-info span {
-    line-height: 20px;
-    margin-right: 5px;
-}
 
 .nav-bar-bottom {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    position: fixed;
-    text-align: center;
-    bottom: 0;
-    max-width: 600px;
+    flex-direction: row;    
+    position:absolute;     
+    max-width: 800px;
     width: 100%;
     height: 51px;
-    margin: 0;
-    padding: 0;
     background-color: #23272A;
 }
 
-.nav-bar-bottom a {
+.nav-bar-bottom span {
+    text-align: center;
     margin: auto;
 }
 
-.nav-bar-bottom a img {
-    padding: 10px;
-}
